add the redpackDetails

--- a/css/man.less
+++ b/css/man.less
@@ -652,6 +652,8 @@ footer {
 		}
 	}
 	.order_details {
+		width: 95%;
+		border-radius: .1rem;
 		.info_form {
 			flex-direction: column;
 			p {
@@ -679,5 +681,28 @@ footer {
 		text-align: center;
 		background: #41B0FF;
 		border-radius: .15rem;
+	}
+	.page_num {
+		width: 100%;
+		justify-content: space-around;
+		align-content: center;
+		height: .8rem;
+		font-size: .3rem;
+		color: #fff;
+		line-height: .8rem;
+		text-align: center;
+		vertical-align: middle;
+		a {
+			width: 45%;
+			height: .6rem;
+			color: #fff;
+			line-height: .6rem;
+			margin: .1rem 0;
+			background: #41B0FF;
+			border-radius: .15rem;
+		}
+		.prev,.next {
+			
+		}
 	}
 }
