--- a/css/man.less
+++ b/css/man.less
@@ -1,4 +1,3 @@
-a{width:8px}
 html,body {
 	margin: 0;
 	height: 100%;
@@ -359,10 +358,12 @@ footer {
 .s_title {
 	display: -webkit-flex;
 	display: flex;
+	border-bottom: 1px solid #eee;
 	position: relative;
 	align-items: center;
 	width: 100%;
 	height: .8rem;
+	margin-bottom: .2rem;
 	input {
 		position: absolute;
 		right: .25rem;
@@ -569,6 +570,11 @@ footer {
 			align-items: center;
 			justify-content: center;
 			padding: 0 .25rem .25rem .25rem;
+			img {
+				height: 2rem;
+				width: 2rem;
+				margin-right: .25rem;
+			}
 			p {
 				display: -webkit-flex;
 				display: flex;
@@ -597,15 +603,28 @@ footer {
 		}
 	}
 	.next_step {
-		width: 95%;
-		height: .8rem;
+		width: 35%;
+		height: .5rem;
 		margin: .15rem;
-		font-size: .3rem;
+		font-size: .15rem;
+		position: relative;
+		left: 60%;
 		color: #fff;
-		line-height: .8rem;
+		line-height: .5rem;
 		text-align: center;
 		background: #41B0FF;
 		border-radius: .15rem;
+	}
+	.aux_msg {
+		height: .6rem;
+		line-height: .6rem;
+		.aux_circle {
+			display: inline-block;
+			background: #666;
+			padding: .08rem;
+			border-radius: .08rem;
+			margin: 0 .15rem;
+		}
 	}
 }
 .icon-order1 {
@@ -737,16 +756,22 @@ footer {
 		margin: .05rem 0 .1rem 0;
 		.list_content {
 			height: 1.6rem;
-			img {
+			a {
+				display: inline-block;
 				width: 1.2rem;
 				height: 1.2rem;
 				padding: .2rem;
+			}
+			img {
+				width: 100%;
+				height: 100%;
 			}
 			.right {
 				width: 75%;
 				padding: .15rem;
 				flex-direction: column;
 				p {
+					width: 100%;
 					overflow: hidden;
 					text-overflow: ellipsis;
 					display: -webkit-box;
@@ -835,5 +860,17 @@ footer {
 		.intro_title {
 			text-align: center;
 		}
+	}
+}
+
+.lightbox {
+	.lb-data {
+		.lb-details {
+			width: 100%;
+			text-align: center;
+		}
+	}
+	.lb-nav {
+		display: none!important;
 	}
 }
