--- a/css/man.less
+++ b/css/man.less
@@ -600,6 +600,22 @@ footer {
 					font-size: .25rem;
 				}
 			}
+			.copy_link {
+				width: 60%;
+				height: 1.7rem;
+				padding: .15rem 0;
+				p {
+					width: 100%;
+					margin: 0;
+					height: .4rem;
+					line-height: .4rem;
+					overflow: hidden;
+					align-items: flex-start;
+				}
+				p:last-child {
+					height: .8rem;
+				}
+			}
 		}
 	}
 	.next_step {
