--- a/css/man.less
+++ b/css/man.less
@@ -613,20 +613,27 @@ footer {
 					align-items: flex-start;
 				}
 				p:last-child {
-					height: .8rem;
+					font-size: .15rem;
+					text-indent: .45rem;
+					color: #666;
+					height: 1.2rem;
+					display: -webkit-box;
+					-webkit-box-orient: vertical;
+					-webkit-line-clamp: 3;
+					overflow: hidden;
+					text-overflow : ellipsis;
 				}
 			}
 		}
 	}
 	.next_step {
-		width: 35%;
-		height: .5rem;
-		margin: .15rem;
-		font-size: .15rem;
-		position: relative;
-		left: 60%;
+		display: block;
+		width: 90%;
+		height: .6rem;
+		margin: .15rem auto;
+		font-size: .3rem;
 		color: #fff;
-		line-height: .5rem;
+		line-height: .6rem;
 		text-align: center;
 		background: #41B0FF;
 		border-radius: .15rem;
