--- a/css/qrcode.less
+++ b/css/qrcode.less
@@ -81,8 +81,9 @@ html {
         align-items: center;
         border-radius: .2rem;
         p{
-            font-size: .35rem;
+            font-size: .3rem;
             height: .8rem;
+            padding: 0 .45rem;
             color: #561803;
             span{
                 color: #ff472e;
