--- a/css/man.less
+++ b/css/man.less
@@ -709,12 +709,32 @@ footer {
 				width: 100%;
 				height: .6rem;
 				border-bottom: 1px solid #eee;
+				overflow: hidden;
 				span {
 					width: 33%;
 					text-align: center;
+					padding-left: .1rem;
 					line-height: .6rem;
 				}
 			}
+		}
+		.info_form2 {
+			p {
+				span {
+					width: 20%;
+				}
+				span:first-child {
+					width: 40%
+				}
+			}
+		}
+	}
+	.sub_title2 {
+		span {
+			width: 20%;
+		}
+		span:first-child {
+			width: 40%
 		}
 	}
 	.next_step {
@@ -749,6 +769,8 @@ footer {
 		}
 	}
 }
+
+
 
 // OrderDetails
 #order_details {
