repair some bugs

--- a/css/man.less
+++ b/css/man.less
@@ -974,6 +974,7 @@ footer {
 	}
 	.content_bottom {
 		justify-content: space-around;
+		padding: .3rem 0;
 		>div {
 			width: 40%;
 			padding: .6rem .15rem .4rem;
@@ -994,10 +995,9 @@ footer {
 			}
 		}
 		.c_bottom {
-			font-size: .22rem;
 			text-align: center;
 			p:first-child {
-				height: .25rem;
+				height: .3rem;
 			    margin: .15rem 0;
 			    position: relative;
 			    .slash {
@@ -1016,15 +1016,17 @@ footer {
 			}
 			p:last-child {
 				font-family: "Microsoft YaHei";
+				font-size: .2rem;
 				// text-indent: .44rem;
-				padding: .15rem;
+				// padding: .15rem;
+				margin: 0 .15rem;
 				height: 1.8rem;
 				color: #333;
-				line-height: .3rem;
+				line-height: .31rem;
 				overflow : hidden;
 				text-overflow: ellipsis;
 				display: -webkit-box;
-				-webkit-line-clamp: 7;
+				-webkit-line-clamp: 6;
 				-webkit-box-orient: vertical;
 			}
 		}
