--- a/css/man.less
+++ b/css/man.less
@@ -10,6 +10,12 @@
 	font-weight: normal;
 	font-style: normal;
 }
+@font-face {
+	font-family: 'PingFang';
+	src: url('../fonts/PingFang SC Regular.ttf') format('truetype');
+	font-weight: normal;
+	font-style: normal;
+}
 html,body {
 	margin: 0;
 	height: 100%;
@@ -958,7 +964,7 @@ footer {
 	.content_center {
 		margin-bottom: .55rem;
 		p {
-			font-family: "Microsoft YaHei";
+			font-family: "PingFang";
 			font-size: .2rem;
 			line-height: .3rem;
 			padding: .25rem .9rem;
@@ -1017,8 +1023,6 @@ footer {
 			p:last-child {
 				font-family: "Microsoft YaHei";
 				font-size: .2rem;
-				// text-indent: .44rem;
-				// padding: .15rem;
 				margin: 0 .15rem;
 				height: 1.8rem;
 				color: #333;
