--- a/css/index.css
+++ b/css/index.css
@@ -3,7 +3,7 @@ a, a:active, a:hover, a:link { text-decoration: none; outline: 0; -webkit-tap-hi
 p { margin: 0 auto }
 .d_flex { display: -webkit-flex; display: flex }
 
-header { align-items: center; justify-content: center; position: fixed; z-index: 999; top: 0; height: .8rem; width: 100%; background: #fff }
+header { align-items: center; justify-content: center; position: fixed; z-index: 999; top: 0; height: .8rem; width: 100%; background: #fff;box-shadow: 0 1px 1px #eee; }
 header .icon-back { position: absolute; padding: .1rem; background: 0 0; left: .3rem; top: .3rem; border: .04rem solid #666; border-top: transparent; border-right: transparent; -webkit-transform: rotate(45deg); -moz-transform: rotate(45deg); -ms-transform: rotate(45deg); -o-transform: rotate(45deg); transform: rotate(45deg) }
 header .title { font-size: .35rem }
 
@@ -25,3 +25,10 @@ header .title { font-size: .35rem }
 .banner_4 span img { height: 1.8rem; position: absolute; top: .5rem; left: .5rem; }
 .banner_4 span p { text-align: right }
 .banner_4 span p.en { margin-bottom: .2rem; }
+
+#content .link { position: relative; flex-direction: column; text-align: center; padding: 1rem 0; }
+
+.link img:first-child { height: .8rem; width: .8rem; margin-bottom: .4rem; position: relative; left: calc(50% - .4rem); }
+.link img:last-child { height: 4.5rem; position: relative; top: 1rem; left: 45%; }
+.link a { color: #126fd9; font-size: .3rem; margin-bottom: .3rem }
+.link span { display: block; width: 2px; height: .4rem; background-color: #000; position: relative; left: calc(50% - 1px); margin-bottom: .3rem; -webkit-transform: rotate(20deg); -moz-transform: rotate(20deg); -ms-transform: rotate(20deg); -o-transform: rotate(20deg); transform: rotate(20deg); }
