--- a/css/reset.css
+++ b/css/reset.css
@@ -21,7 +21,7 @@ input,textarea,select,optgroup,option{font-size:14px;}
 .table{ border-left:1px solid #e5e5e5; border-top:1px solid #e5e5e5; }
 .table th,.table td{ border-right:1px solid #e5e5e5; border-bottom:1px solid #e5e5e5; }
 /* 自定类样式 开始 */
-html{width:100%;background:#f5f5f5;}
+html{width:100%;/*background:#f5f5f5;*/}
 body{font-family:"微软雅黑"; font-size:14px; color:#333; }
 a{text-decoration:none; color:#333;}
 input{border:1px solid #e5e5e5;outline:none;}
