--- a/旧版/css/man.less
+++ b/旧版/css/man.less
@@ -1,25 +1,7 @@
-@font-face {
-	font-family: 'FZSHANGKJW';
-	src: url('../fonts/方正尚酷简体FZSHANGKJW.TTF') format('truetype');
-	font-weight: normal;
-	font-style: normal;
-}
-@font-face {
-	font-family: 'ZZGFLQCGT';
-	src: url('../fonts/造字工房朗倩常规体.otf') format('truetype');
-	font-weight: normal;
-	font-style: normal;
-}
-@font-face {
-	font-family: 'PingFang';
-	src: url('../fonts/PingFang SC Regular.ttf') format('truetype');
-	font-weight: normal;
-	font-style: normal;
-}
+a{width:8px}
 html,body {
 	margin: 0;
 	height: 100%;
-	font-family: "Microsoft YaHei";
 	color: #383838;
 	-webkit-tap-highlight-color:transparent;
 }
@@ -47,7 +29,6 @@ header {
 	height: .8rem;
 	width: 100%;
 	background: #fff;
-	box-shadow: 0 0px 5px #ddd;
 	.icon-back {
 		position: absolute;
 		padding: .1rem;
@@ -378,12 +359,10 @@ footer {
 .s_title {
 	display: -webkit-flex;
 	display: flex;
-	border-bottom: 1px solid #eee;
 	position: relative;
 	align-items: center;
 	width: 100%;
 	height: .8rem;
-	margin-bottom: .2rem;
 	input {
 		position: absolute;
 		right: .25rem;
@@ -590,11 +569,6 @@ footer {
 			align-items: center;
 			justify-content: center;
 			padding: 0 .25rem .25rem .25rem;
-			img {
-				height: 2rem;
-				width: 2rem;
-				margin-right: .25rem;
-			}
 			p {
 				display: -webkit-flex;
 				display: flex;
@@ -620,54 +594,18 @@ footer {
 					font-size: .25rem;
 				}
 			}
-			.copy_link {
-				width: 60%;
-				height: 1.7rem;
-				padding: .15rem 0;
-				p {
-					width: 100%;
-					margin: 0;
-					height: .4rem;
-					line-height: .4rem;
-					overflow: hidden;
-					align-items: flex-start;
-				}
-				p:last-child {
-					font-size: .15rem;
-					text-indent: .45rem;
-					color: #666;
-					height: 1.2rem;
-					display: -webkit-box;
-					-webkit-box-orient: vertical;
-					-webkit-line-clamp: 3;
-					overflow: hidden;
-					text-overflow : ellipsis;
-				}
-			}
 		}
 	}
 	.next_step {
-		display: block;
-		width: 90%;
-		height: .6rem;
-		margin: .15rem auto;
+		width: 95%;
+		height: .8rem;
+		margin: .15rem;
 		font-size: .3rem;
 		color: #fff;
-		line-height: .6rem;
+		line-height: .8rem;
 		text-align: center;
 		background: #41B0FF;
 		border-radius: .15rem;
-	}
-	.aux_msg {
-		height: .6rem;
-		line-height: .6rem;
-		.aux_circle {
-			display: inline-block;
-			background: #666;
-			padding: .08rem;
-			border-radius: .08rem;
-			margin: 0 .15rem;
-		}
 	}
 }
 .icon-order1 {
@@ -729,32 +667,12 @@ footer {
 				width: 100%;
 				height: .6rem;
 				border-bottom: 1px solid #eee;
-				overflow: hidden;
 				span {
 					width: 33%;
 					text-align: center;
-					padding-left: .1rem;
 					line-height: .6rem;
 				}
 			}
-		}
-		.info_form2 {
-			p {
-				span {
-					width: 20%;
-				}
-				span:first-child {
-					width: 40%
-				}
-			}
-		}
-	}
-	.sub_title2 {
-		span {
-			width: 20%;
-		}
-		span:first-child {
-			width: 40%
 		}
 	}
 	.next_step {
@@ -790,8 +708,6 @@ footer {
 	}
 }
 
-
-
 // OrderDetails
 #order_details {
 	margin-top: .85rem;
@@ -821,22 +737,16 @@ footer {
 		margin: .05rem 0 .1rem 0;
 		.list_content {
 			height: 1.6rem;
-			a {
-				display: inline-block;
+			img {
 				width: 1.2rem;
 				height: 1.2rem;
 				padding: .2rem;
-			}
-			img {
-				width: 100%;
-				height: 100%;
 			}
 			.right {
 				width: 75%;
 				padding: .15rem;
 				flex-direction: column;
 				p {
-					width: 100%;
 					overflow: hidden;
 					text-overflow: ellipsis;
 					display: -webkit-box;
@@ -925,249 +835,5 @@ footer {
 		.intro_title {
 			text-align: center;
 		}
-	}
-}
-
-.lightbox {
-	.lb-data {
-		.lb-details {
-			width: 100%;
-			text-align: center;
-		}
-	}
-	.lb-nav {
-		display: none!important;
-	}
-}
-
-// indexNew
-#index_new {
-	margin-top: .8rem;
-	position: relative;
-	overflow: hidden;
-	.content_top {
-		align-items: center;
-		justify-content: center;
-		height: 1.8rem;
-		img {
-			height: .5rem;
-		}
-		img:first-child {
-			margin-right: .4rem;
-			-webkit-transform: scale(1.35, 1.35);
-			   -moz-transform: scale(1.35, 1.35);
-			    -ms-transform: scale(1.35, 1.35);
-			     -o-transform: scale(1.35, 1.35);
-			        transform: scale(1.35, 1.35);
-		}
-	}
-	.content_center {
-		margin-bottom: .55rem;
-		p {
-			font-family: "PingFang";
-			font-size: .2rem;
-			line-height: .3rem;
-			padding: .25rem .9rem;
-			color: #333;
-			text-align: center;
-		}
-		p:first-child {
-			font-family: 'ZZGFLQCGT';
-			color: #F75D09;
-			-webkit-mask-image: -webkit-gradient(linear, 0 0, 0 bottom, from(rgba(252, 143, 3, 0.7)), to(#F75D09));
-			font-size: .25rem;
-		}
-	}
-	.content_bottom {
-		justify-content: space-around;
-		padding: .3rem 0;
-		>div {
-			width: 40%;
-			padding: .6rem .15rem .4rem;
-			box-shadow: 0px 0px 15px #dfdfdf;
-			position: relative;
-		}
-		.c_top {
-			text-align: center;
-			color: rgb(252, 143, 3);
-			p {
-				font-family: "Microsoft YaHei";
-				font-size: .15rem;
-			}
-			p:first-child {
-				font-family: 'FZSHANGKJW';
-				font-size: .3rem;
-				padding: .1rem 0;
-			}
-		}
-		.c_bottom {
-			text-align: center;
-			p:first-child {
-				height: .3rem;
-			    margin: .15rem 0;
-			    position: relative;
-			    .slash {
-			    	display: block;
-			    	position: absolute;
-			    	left: 50%;
-			    	width: .03rem;
-			    	height: .35rem;
-			    	background-color: rgb(252, 143, 3);
-			    	-webkit-transform: rotate(30deg);
-			    	   -moz-transform: rotate(30deg);
-			    	    -ms-transform: rotate(30deg);
-			    	     -o-transform: rotate(30deg);
-			    	        transform: rotate(30deg);
-			    }
-			}
-			p:last-child {
-				font-family: "Microsoft YaHei";
-				font-size: .2rem;
-				margin: 0 .15rem;
-				height: 1.8rem;
-				color: #333;
-				line-height: .31rem;
-				overflow : hidden;
-				text-overflow: ellipsis;
-				display: -webkit-box;
-				-webkit-line-clamp: 6;
-				-webkit-box-orient: vertical;
-			}
-		}
-		.c_left {
-			overflow: hidden;
-			.bg_cube {
-				background-image: -webkit-linear-gradient(to top, rgb(252,138,1), rgb(254,168,9));
-				background-image:    -moz-linear-gradient(to top, rgb(252,138,1), rgb(254,168,9));
-				background-image:     -ms-linear-gradient(to top, rgb(252,138,1), rgb(254,168,9));
-				background-image:      -o-linear-gradient(to top, rgb(252,138,1), rgb(254,168,9));
-				background-image:         linear-gradient(to top, rgb(252,138,1), rgb(254,168,9));
-				-webkit-transform: rotate(-30deg);
-				   -moz-transform: rotate(-30deg);
-				    -ms-transform: rotate(-30deg);
-				     -o-transform: rotate(-30deg);
-				        transform: rotate(-30deg);
-				top: -.45rem;
-				left: .4rem;
-			}
-			.bg_circle {
-				top: .65rem;
-				left: -.2rem;
-			}
-		}
-		.c_right {
-			overflow: hidden;
-			.bg_cube {
-				background-image: -webkit-linear-gradient(to top, rgb(207,64,42), rgba(255,99,3,.95));
-				background-image:    -moz-linear-gradient(to top, rgb(207,64,42), rgba(255,99,3,.95));
-				background-image:     -ms-linear-gradient(to top, rgb(207,64,42), rgba(255,99,3,.95));
-				background-image:      -o-linear-gradient(to top, rgb(207,64,42), rgba(255,99,3,.95));
-				background-image:         linear-gradient(to top, rgb(207,64,42), rgba(255,99,3,.95));
-				-webkit-transform: rotate(-30deg);
-				   -moz-transform: rotate(-30deg);
-				    -ms-transform: rotate(-30deg);
-				     -o-transform: rotate(-30deg);
-				        transform: rotate(-30deg);
-				bottom: -.45rem;
-				right: .4rem;
-			}
-			.bg_circle {
-				bottom: .65rem;
-				right: -.2rem;
-			}
-		}
-	}
-	.bg_cube {
-		display: block;
-		background-image: -webkit-linear-gradient(to top, rgb(252,138,1), rgb(254,168,9));
-		background-image:    -moz-linear-gradient(to top, rgb(252,138,1), rgb(254,168,9));
-		background-image:     -ms-linear-gradient(to top, rgb(252,138,1), rgb(254,168,9));
-		background-image:      -o-linear-gradient(to top, rgb(252,138,1), rgb(254,168,9));
-		background-image:         linear-gradient(to top, rgb(252,138,1), rgb(254,168,9));
-		position: absolute;
-		width: 1.4rem;
-		height: .8rem;
-		border-radius: .2rem;
-	}
-	.bg_circle {
-		display: block;
-		background-image: -webkit-linear-gradient(to top, rgb(252,138,1), rgb(254,168,9));
-		background-image:    -moz-linear-gradient(to top, rgb(252,138,1), rgb(254,168,9));
-		background-image:     -ms-linear-gradient(to top, rgb(252,138,1), rgb(254,168,9));
-		background-image:      -o-linear-gradient(to top, rgb(252,138,1), rgb(254,168,9));
-		background-image:         linear-gradient(to top, rgb(252,138,1), rgb(254,168,9));
-		position: absolute;
-		width: .4rem;
-		height: .4rem;
-		border-radius: .4rem;
-	}
-	.cube1 {
-		border-radius: .1rem;
-		-webkit-transform: rotate(45deg);
-		   -moz-transform: rotate(45deg);
-		    -ms-transform: rotate(45deg);
-		     -o-transform: rotate(45deg);
-		        transform: rotate(45deg);
-        width: 1rem;
-        height: .6rem;
-		top: -.4rem;
-		right: .4rem;
-	}
-	.cube2 {
-		border-radius: .2rem;
-		-webkit-transform: rotate(45deg);
-		   -moz-transform: rotate(45deg);
-		    -ms-transform: rotate(45deg);
-		     -o-transform: rotate(45deg);
-		        transform: rotate(45deg);
-        width: 1.8rem;
-        height: 1.4rem;
-		top: 1.4rem;
-		right: -1.2rem;
-	}
-	.bg_polygon1 {
-		display: block;
-		position: absolute;
-		z-index: -2;
-		background-color: rgb(251, 171, 73);
-		width: 1.4rem;
-		height: .8rem;
-		-webkit-transform: rotate(30deg);
-		   -moz-transform: rotate(30deg);
-		    -ms-transform: rotate(30deg);
-		     -o-transform: rotate(30deg);
-		        transform: rotate(30deg);
-		-webkit-clip-path: polygon(0% 0%, 100% 0%, 85% 50%, 0% 100%);
-		clip-path: polygon(0% 0%, 100% 0%, 90% 50%, 0% 100%);
-		top: .95rem;
-		left: .86rem;
-	}
-	.bg_polygon2 {
-		display: block;
-		position: absolute;
-		z-index: -1;
-		background-color: rgb(252, 140, 2);
-		width: 2.2rem;
-		height: 1rem;
-		-webkit-clip-path: polygon(100% 100%, 0% 100%, 40% 0%, 100% 20%);
-		clip-path: polygon(100% 100%, 0% 100%, 40% 0%, 100% 20%);
-		top: .35rem;
-		left: .15rem;
-	}
-	.bg_polygon3 {
-		display: block;
-		position: absolute;
-		z-index: -3;
-		background-color: rgb(247, 93, 9);
-		width: 1.5rem;
-		height: 2.4rem;
-		-webkit-clip-path: polygon(0% 0%, 25% 0%, 100% 50%, 0% 100%);
-		clip-path: polygon(0% 0%, 25% 0%, 100% 50%, 0% 100%);
-		top: -.35rem;
-		left: 0;
-	}
-	.for_ipad {
-		width: 100%;
-		height: 1rem;
 	}
 }
